[project]
name = "ph2651-analysis"
version = "0.0.1"
description = "Data analysis programs for PH2651: Intermediate Physics Laboratory"
dependencies = [
    #"chaospy>=4.3.21",
    "juliacall>=0.9.31",
    #"mcerp3>=1.0.3",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    #"soerp3>=0.9.7",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
    "uncertainties>=3.2.3",
]
